[gd_scene load_steps=4 format=3 uid="uid://bn3eieajc65u5"]

[ext_resource type="Script" uid="uid://co1shtrhf8nn6" path="res://game/enemy/jumper/jumper.gd" id="1_7qwau"]
[ext_resource type="Texture2D" uid="uid://4uptwk5pqqee" path="res://game/enemy/jumper/spring.png" id="1_oi6bi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7qwau"]
size = Vector2(128, 256)

[node name="Jumper" type="RigidBody2D"]
script = ExtResource("1_7qwau")

[node name="Spring" type="Sprite2D" parent="."]
texture = ExtResource("1_oi6bi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7qwau")

[node name="ground_ray" type="RayCast2D" parent="."]
position = Vector2(0, 128)
target_position = Vector2(0, 64)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
